# review_bot

./: .gitignore  README.md  docker-compose-qdrant.yml  env.template  pyproject.toml
app/: config.py  log.py  main.py  schema.py
app/core/: document_db.py  rag.py  utils.py
bert_lm_tn2_L12_S256/: README.md  save_to_onnx_feature_extraction.py
bert_lm_tn2_L12_S256/serving/: docker-compose.yml  serve.py
config/: scoring_system_description.txt  system_description.txt
qdrant_scripts/: fill_qdrant_index.py  load_data.py
samples/: questions.txt
scripts/: run_rag.sh  run_ui.sh
tinybert/: config.json
tinybert/serving/: Dockerfile  README.md  docker-compose.yml  requirements.txt
ui/: app.py
